--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "azure-storage": "^2.10.7",
     "express": "^4.18.2"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
